# guh

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: keyboard_host.py  midi_host.py  msc_host.py
guh/: __init__.py
guh/engines/: __init__.py  keyboard.py  midi.py  msc.py
guh/periph/: msc.py
guh/platform/: __init__.py  tiliqua.py
guh/protocol/: __init__.py  descriptors.py  setup.py
guh/usbh/: __init__.py  descriptor.py  enumerator.py  reset.py  sie.py  types.py
guh/util/: __init__.py  clocks.py  hexdump.py  test_devices.py  test_util.py
tests/: conftest.py  test_descriptor.py  test_integration.py  test_protocol.py
tests/data/usbdesc_config/: README.md
